# network_lang

./: .gitignore  LICENSE  README.md  flow_client.py  go.mod  graph_html.py  interface_mbps.html  mock_client.py  pyproject.toml  traffic_bytes.html
cmd/flowcollector/: main.go
docs/: adapters.md  getting-started.md  inventory.md  operations.md  syntax-v0.md  topology-preflight.md
docs/source/: adapters.rst  api.rst  cli.rst  conf.py  examples.rst  flowcollector.rst  getting-started.rst  index.rst  inventory.rst  operations.rst  syntax-v0.rst  topology-preflight.rst
examples/: operations.uns
internal/flowcollector/: netflowv5.go  netflowv5_test.go
network_lang/: __init__.py  api.py  cli.py  exporters.py  flows.py  graph_client.py  graphing.py  model.py  parser.py  reconcile.py  result.py  targets.py  topology.py  validation.py
network_lang/adapters/: __init__.py  mikrotik_routeros.py  ubnt_airos.py  ubnt_unms.py
network_lang/adapters/ros/: __init__.py  _base.py  _literals.py  minimal.py  requirements.txt
network_lang/adapters/ros/interface/: __init__.py  interface.py
network_lang/adapters/ros/ppp/: _literals.py  profile.py
network_lang/adapters/ros/userman/: __init__.py  router.py  user.py
network_lang/adapters/rosapi/: __init__.py  examples.py  ros.py
network_lang/data/: inventory.json
tests/: test_flows.py  test_graphing.py  test_mikrotik_routeros.py  test_parser.py  test_reconcile.py  test_targets.py  test_topology.py  test_ubnt_airos.py  test_ubnt_unms.py  test_validation.py
tests/fixtures/: not-a-list.json
(+25 files in other folders)
